# DemonClaw

./: .gitignore  ACTIVE_DEFENSE.md  CHANGELOG.md  CONFIG.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  SPEC.md  docker-compose.yml
.cargo/: audit.toml
.github/: FUNDING.yml  SECURITY.md  pull_request_template.md
.github/workflows/: ci.yml  security.yml
assets/: README.md
migrations/: 202603200001_init_memory_schema.sql
payloads/: README.md
payloads/config_auditor/: Cargo.toml
payloads/config_auditor/src/: lib.rs
payloads/network_scanner/: Cargo.toml
payloads/network_scanner/src/: lib.rs
payloads/test_payload/: Cargo.toml
payloads/test_payload/src/: lib.rs
payloads/web_enum/: Cargo.toml
payloads/web_enum/src/: lib.rs
src/: config.rs  embeddings.rs  evidence.rs  lib.rs  main.rs  security.rs  tls.rs  types.rs
src/active_defense/: commands.rs  finders.rs  findings.rs  mod.rs  probes.rs  remediation.rs  runner.rs  types.rs  verify.rs
src/channels/: mod.rs
src/darkprompt/: mod.rs
src/ghostmcp/: mod.rs
src/loop/: mod.rs
src/memory/: mod.rs
src/sandbox/: mod.rs
src/scanner/: mod.rs
src/scheduler/: mod.rs
src/signalgate/: mod.rs
tests/: e2e_spec.rs  evidence_chain_test.rs  integration.rs  sandbox_test.rs  security_policy_test.rs
