[package]
name = "demonclaw"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
wasmparser = "0.240.0"
wasmtime = "42.0.1"
wasmtime-wasi = "42.0.1"
ipnetwork = "0.20.0"
regex = { version = "1.11.1", default-features = false, features = ["std", "perf"] }
sha2 = "0.10.8"
url = "2.5.4"
async-trait = "0.1.88"
